@@ -1,61 +1,59 @@
 package at.ac.tuwien.sepm.groupphase.backend.endpoint.exceptionhandler;
 
+import at.ac.tuwien.sepm.groupphase.backend.endpoint.dto.exception.IllegalArgumentExceptionDto;
+import at.ac.tuwien.sepm.groupphase.backend.endpoint.dto.exception.NotFoundExceptionDto;
+import at.ac.tuwien.sepm.groupphase.backend.endpoint.dto.exception.ValidationExceptionDto;
 import at.ac.tuwien.sepm.groupphase.backend.exception.NotFoundException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
-import org.springframework.http.ResponseEntity;
+import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
-import org.springframework.web.context.request.WebRequest;
-import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.bind.annotation.ResponseStatus;
 
 import java.lang.invoke.MethodHandles;
-import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
-/**
- * Register all your Java exceptions here to map them into meaningful HTTP exceptions
- * If you have special cases which are only important for specific endpoints, use ResponseStatusExceptions
- * https://www.baeldung.com/exception-handling-for-rest-with-spring#responsestatusexception
- */
 @ControllerAdvice
-public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
-
+public class GlobalExceptionHandler {
     private static final Logger LOGGER = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-    /**
-     * Use the @ExceptionHandler annotation to write handler for custom exceptions.
-     */
     @ExceptionHandler(value = {NotFoundException.class})
-    protected ResponseEntity<Object> handleNotFound(RuntimeException ex, WebRequest request) {
-        LOGGER.warn(ex.getMessage());
-        return handleExceptionInternal(ex, ex.getMessage(), new HttpHeaders(), HttpStatus.NOT_FOUND, request);
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    @ResponseBody
+    protected NotFoundExceptionDto handleNotFound(NotFoundException notFoundException) {
+
+        LOGGER.info("NotFound: {}", notFoundException.getMessage());
+
+        return new NotFoundExceptionDto(notFoundException.getMessage());
     }
 
-    /**
-     * Override methods from ResponseEntityExceptionHandler to send a customized HTTP response for a know exception
-     * from e.g. Spring
-     */
-    @Override
-    protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex,
-        HttpHeaders headers,
-        HttpStatusCode status, WebRequest request) {
-        Map<String, Object> body = new LinkedHashMap<>();
-        //Get all errors
-        List<String> errors = ex.getBindingResult()
+    @ExceptionHandler(value = {MethodArgumentNotValidException.class})
+    @ResponseStatus(HttpStatus.UNPROCESSABLE_ENTITY)
+    @ResponseBody
+    public ValidationExceptionDto handleMethodArgumentNotValid(MethodArgumentNotValidException validationException) {
+
+        LOGGER.info("ValidationException: {}", validationException.getMessage());
+
+        List<String> errors = validationException
             .getFieldErrors()
             .stream()
-            .map(err -> err.getField() + " " + err.getDefaultMessage())
-            .collect(Collectors.toList());
-        body.put("Validation errors", errors);
+            .map(FieldError::getDefaultMessage)
+            .toList();
 
-        return new ResponseEntity<>(body.toString(), headers, status);
+        return new ValidationExceptionDto("The input is not valid.", errors);
+    }
 
+    @ExceptionHandler(value = {IllegalArgumentException.class})
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    @ResponseBody
+    public IllegalArgumentExceptionDto handleIllegalArgumentException(IllegalArgumentException illegalArgumentException) {
+
+        LOGGER.info("IllegalArgumentException: {}", illegalArgumentException.getMessage());
+
+        return new IllegalArgumentExceptionDto(illegalArgumentException.getMessage());
     }
 }
